practice-labs/k8s-dojo/k8s-coaching/10-ingress-controller/grade-submission-portal/grade-submission-portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grade-submission-portal
  namespace: grade-submission
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: grade-submission-portal
  ports:
  - port: 5001
    targetPort: 5001
