practice-labs/k8s-dojo/k8s-coaching/10-ingress-controller/grade-submission-portal/grade-submission-portal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grade-submission-portal-ingress
  namespace: grade-submission
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: grade-submission-portal
            port: 
              number: 5001
